--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,8 +63,8 @@ jobs:
       - name: Install DigitalOcean CLI (doctl)
         run: |
           cd ~
-          wget https://github.com/digitalocean/doctl/releases/download/v1.98.4/doctl-1.98.4-linux-x86_64.tar.gz
-          tar xf ~/doctl-1.98.4-linux-x86_64.tar.gz
+          wget https://github.com/digitalocean/doctl/releases/download/v1.99.0/doctl-1.99.0-linux-amd64.tar.gz
+          tar xf ~/doctl-1.99.0-linux-amd64.tar.gz
           sudo mv ~/doctl /usr/local/bin
 
       - name: Authenticate with DigitalOcean
@@ -124,8 +124,8 @@ jobs:
       - name: Setup DigitalOcean CLI
         run: |
           cd ~
-          wget https://github.com/digitalocean/doctl/releases/download/v1.98.4/doctl-1.98.4-linux-x86_64.tar.gz
-          tar xf ~/doctl-1.98.4-linux-x86_64.tar.gz
+          wget https://github.com/digitalocean/doctl/releases/download/v1.99.0/doctl-1.99.0-linux-amd64.tar.gz
+          tar xf ~/doctl-1.99.0-linux-amd64.tar.gz
           sudo mv ~/doctl /usr/local/bin
 
       - name: Authenticate with DigitalOcean
