Add DigitalOcean serverless function support to Vercel /stream endpoint: use DO if DIGITALOCEAN_URL env var is set, fallback to local extraction

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
     "version": 2,
+    "env": {
+        "SPOTIFY_CLIENT_ID": "@spotify_client_id",
+        "SPOTIFY_CLIENT_SECRET": "@spotify_client_secret",
+        "PROXY": "@proxy_url",
+        "DIGITALOCEAN_URL": "@digitalocean_url"
+    },
     "builds": [
         {
             "src": "api/index.js",
