Remove DIGITALOCEAN_URL from vercel.json; document that env vars should be set in Vercel dashboard

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
     "version": 2,
-    "env": {
-        "DIGITALOCEAN_URL": "@digitalocean_url"
-    },
+    "env": {},
     "builds": [
         {
             "src": "api/index.js",
