--- a/.doignore
+++ b/.doignore
@@ -1,57 +1,1 @@
-# Digital Ocean Functions ignore file
-
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build files
-dist/
-build/
-
-# Environment variables
-.env
-.env.local
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Git
-.git/
-.gitignore
-
-# Documentation
-README.md
-layout_guide.md
-proxy_setup.md
-
-# Other serverless configs
-vercel.json
-
-# Node package artifacts to ignore (don’t treat as functions)
-packages/youtube/package.json
-packages/youtube/package-lock.json
-packages/youtube/node_modules/
-
-# (Python files are required for this project; do not exclude them)
-
-# Test files
-test/
-*.test.js
-*.spec.js
-
-# Logs
-logs/
-*.log
-proxyLogs/
-
-# Cookies
-cookies.txt
-
-# Scripts
-setup_proxy.sh
-debug_ytsr.js
+deployed_serverless_handler.zip\ntemp_serverless_handler_code.zip\ntemp_serverless_handler_code.py
