--- a/docker_pie/render.yaml
+++ b/docker_pie/render.yaml
@@ -10,4 +10,7 @@ services:
       - key: ENV
         value: production
       - key: REQUEST_TIMEOUT
-        value: 90
+        value: 90      - key: COOKIES_FILE
+        value: /tmp/cookies.txt
+      - key: LOG_DIR
+        value: /tmp/proxyLogs
