--- a/docker_pie/Dockerfile
+++ b/docker_pie/Dockerfile
@@ -11,13 +11,20 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Install system dependencies including Node.js for yt-dlp JavaScript runtime
+# Use nodejs from official repo for better compatibility
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     git \
     jq \
-    nodejs \
-    npm \
+    ca-certificates \
+    gnupg \
+    lsb-release \
+    && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt-get install -y --no-install-recommends nodejs \
     && rm -rf /var/lib/apt/lists/*
+
+# Verify Node.js installation
+RUN which node && node --version && npm --version
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
@@ -25,19 +32,19 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application files
 COPY app.py .
-COPY playground.html ./static/
-COPY playground.js ./static/
+COPY static ./static/
+COPY cookies.txt .
 
 # Create necessary directories
 RUN mkdir -p /tmp/proxyLogs /tmp/videos
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:${PORT:-5000}/ || exit 1
+    CMD curl -f http://localhost:${PORT:-5000}/health || exit 1
 
 # Expose port (use Render/Koyeb PORT env var)
 ENV PORT=5000
 EXPOSE 5000
 
-# Start the application
-CMD ["sh", "-c", "python app.py ${PORT:-5000}"]
+# Start the application with proper environment
+CMD ["sh", "-c", "export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin && python app.py ${PORT:-5000}"]
