Fix cookie loading: check /app/cookies.txt first, improve multi-location cookie detection, update COOKIES_FILE env var

--- a/docker_pie/render.yaml
+++ b/docker_pie/render.yaml
@@ -10,7 +10,8 @@ services:
       - key: ENV
         value: production
       - key: REQUEST_TIMEOUT
-        value: 90      - key: COOKIES_FILE
-        value: /tmp/cookies.txt
+        value: 90
+      - key: COOKIES_FILE
+        value: /app/cookies.txt
       - key: LOG_DIR
         value: /tmp/proxyLogs
