--- a/docker_pie/docker-compose.yml
+++ b/docker_pie/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       - PORT=5000
       - ENV=development
       - LOG_DIR=/tmp/proxyLogs
-      - COOKIES_FILE=/tmp/cookies.txt
+      - COOKIES_FILE=/app/cookies.txt
       - REQUEST_TIMEOUT=60
     volumes:
       - ./logs:/tmp/proxyLogs
-      - ./cookies.txt:/tmp/cookies.txt:ro
+      - ./cookies.txt:/app/cookies.txt:ro
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
