Add shared youtube_extractor module (Option C), create DO serverless handler, fix cookies loading, update gitignore to include docker_pie/cookies.txt

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ __pycache__/
 *.pyc
 
 # Cookies (sensitive auth data - never commit)
+# EXCEPT: docker_pie/cookies.txt is needed for Docker builds
 cookies.txt
 **/cookies.txt
+!/docker_pie/cookies.txt
 .venv/
